--- a/app/src/main/res/layout/shr_staggered_product_card_third.xml
+++ b/app/src/main/res/layout/shr_staggered_product_card_third.xml
@@ -36,10 +36,10 @@
                 android:textAppearance="?attr/textAppearanceSubtitle2" />
 
             <TextView
-                android:id="@+id/product_price"
+                android:id="@+id/product_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/shr_product_description"
+                android:text="@string/shr_product_status"
                 android:textAlignment="center"
                 android:textAppearance="?attr/textAppearanceBody2" />
         </LinearLayout>
