--- a/app/src/main/res/layout/shr_product_card.xml
+++ b/app/src/main/res/layout/shr_product_card.xml
@@ -33,7 +33,7 @@
                 android:textAppearance="?attr/textAppearanceHeadline6" />
 
             <TextView
-                android:id="@+id/status"
+                android:id="@+id/product_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/shr_product_status"
