--- a/app/src/main/res/layout/shr_product_card.xml
+++ b/app/src/main/res/layout/shr_product_card.xml
@@ -15,23 +15,13 @@
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/product_image"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/shr_product_card_image_height"
-            android:background="?attr/colorPrimaryDark"
-            android:scaleType="centerCrop" />
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimaryDark"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <TextView
-                android:id="@+id/product_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textAppearance="?attr/textAppearanceHeadline6"
-                android:visibility="invisible" />
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/product_title"
@@ -48,6 +38,13 @@
                 android:text="@string/shr_product_status"
                 android:textAppearance="?attr/textAppearanceBody2"
                 android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/product_id"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:visibility="invisible" />
         </LinearLayout>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
